2003-09-26  John David Anglin  <dave.anglin@nrc-cnrc.gc.ca>

	PR bootstrap/12358
	* pa.c (output_bvb): Fix typo.

2003-09-24  Alexandre Oliva  <aoliva@redhat.com>

	* cpplib.c (do_pragma): Reintroduce cb_line_change call in the
	code path that calls a handler.

2003-09-23  Geoffrey Keating  <geoffk@apple.com>

	* config/t-darwin (crt2.o): Add stmp-int-hdrs to dependencies.

	* config/rs6000/rs6000.c (function_arg_pass_by_reference): Don't
	pass zero-size arrays by reference.
	(rs6000_va_arg): Likewise.

2003-09-22	Joel Sherrill <joel@oarcorp.com>

	* combine.c, config/mips/t-elf, config/c4x/rtems.h: Revert patches
	which should not have been committed with other RTEMS changes.

2003-09-22  Olivier Hainque  <hainque@act-europe.fr>

	PR target/9786
	* reg-stack.c (convert_regs_1): Purge possible dead eh edges
	after potential deletion of trapping insn. Avoids later ICE
	from call to fixup_abnormal_edges.
	(convert_regs_2): Stack the current block successors before
	processing this block, that is, before the potential deletion of
	dead edges by convert_regs_1, because these edges have been used
	to initialize the predecessors count.

2003-09-21  Eric Botcazou  <ebotcazou@libertysurf.fr>

	PR target/12301
	* reorg.c (stop_search_p): Return 1 for insns that can
	throw internally.

2003-09-19  Joel Sherrill <joel@oarcorp.com>

	* config/m68k/t-m68kbare, config/m68k/t-rtems: Change 68681 to
	68881.

2003-09-19  Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* config/m68k/t-rtems (m68k-*-rtems*): New.
	* config.gcc: Use config/m68k/t-rtems.

2003-09-19  Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* config/mips/t-rtems: New.
	* config.gcc (mips*-*-rtems*): Use config/mips/t-rtems.

2003-09-19  T. Papadopoulo <Theodore.Papadopoulo@sophia.inria.fr>
            Eric Botcazou <ebotcazou@libertysurf.fr>

	PR target/12166
	* config/sparc/sol2-c1.asm (start): Set __Argv if GCRT1.

2003-09-18  Mark Mitchell  <mark@codesourcery.com>

	PR target/11184